<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvConsSpec"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/specification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConsDisplay"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:text="@string/display"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/tvConsDisplayDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_specs_display"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/tvConsSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/size"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/tvConsSizeDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_specs_size"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/tvConsBattery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="165dp" />

    <TextView
        android:id="@+id/tvConsBatteryDesc"
        android:layout_width="0dp"
        android:layout_height="266dp"
        android:text="@string/content_specs_battery"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="165dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="105dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
