<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvConsSeller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivConsSeller"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/tvConsProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="140dp" />

    <Button
        android:id="@+id/btnConsBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="204dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
