<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNilai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_nilai_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/show_title"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/show_toast"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"/>

    <!-- TODO: Add Text View-->
    <TextView
        android:id="@+id/tvTextHold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:text="Hello Kotlin."
        android:textSize="25sp"
        android:layout_marginTop="10dp" />

</LinearLayout>