<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".bottomSheetDialog.BottomSheetActivity"
    tools:showIn="@layout/activity_bottom_sheet">>

    <Button
        android:id="@+id/btnBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_bottom_sheet" />

    <Button
        android:id="@+id/btnBottomSheetDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_bottom_sheet_dialog" />

    <Button
        android:id="@+id/btnBottomDialogFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_bottom_sheet_dialog_fragment" />

    <TextView
        android:id="@+id/tvBottomActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>