<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btnCalculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculation" />

    <Button
        android:id="@+id/btnClassification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_clasification" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Operation" />

    <Button
        android:id="@+id/btnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Style Activity" />

    <Button
        android:id="@+id/btnDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Demo Activity" />

    <Button
        android:id="@+id/btnVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Volume" />

</LinearLayout>