<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@android:color/holo_purple"
    tools:context=".fragments.LastFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/hello_last_fragment" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="My Name" />

    <TextView
        android:id="@+id/tvLastMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="My Message" />

    <Button
        android:id="@+id/btnOtherActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_other_activity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnShowDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog"
        android:textAllCaps="false" />

</LinearLayout>