<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_username"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_password"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvLoginStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Status login : "
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textStyle="italic"/>


</LinearLayout>