<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sharedPreferences.SharedPreferencesActivity"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp_nama"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tvPrefName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/sp_nama" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp_email"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tvPrefEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/sp_email" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp_handphone"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tvPrefHandphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/sp_handphone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp_age"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tvPrefAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/sp_age" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp_hobby"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tvPrefHobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/sp_hobby" />

    <Button
        android:id="@+id/btnPrefSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change"
        android:layout_marginTop="4dp" />

</LinearLayout>